k8s/infra/configs/hubble/hubble-security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-ui-oidc
  namespace: kube-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble-ui
  oidc:
    provider:
      issuer: https://auth.tale.me/application/o/hubble/
    clientID: 1ec362e68efbaf1aaeb53ed30601395d859edd9d
    clientSecret:
      name: hubble-ui-oidc-secret
    redirectURL: https://hubble.tale.me/oauth2/callback
    logoutPath: /logout
